--- a/CyberFicha/index.html
+++ b/CyberFicha/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
             <img src="images/icon.jpg" width="40" height="40" class="d-inline-block align-top" alt="">
             CyberFicha
         </a>
@@ -45,15 +45,6 @@
             </ul>
         </div>
     </nav>
-
-
-
-    <footer>
-        <div class="footer navbar-dark bg-dark">
-            <p>CyberFicha &copy</p>
-        </div>
-    </footer>
-
 
     <script src="js/jquery.js"></script>
     <script src="styles/bootstrap/js/bootstrap.js"></script>
