Desenvolvimento de telas

--- a/CyberFicha/createSheet.html
+++ b/CyberFicha/createSheet.html
@@ -27,7 +27,7 @@
                         Ficha
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Criar Ficha</a>
+                        <a class="dropdown-item" href="createSheet.html">Criar Ficha</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Minhas Fichas</a>
                     </div>
@@ -38,10 +38,13 @@
                         Campanha
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Criar Campanha</a>
+                        <a class="dropdown-item" href="criarCampanha.html">Criar Campanha</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Minhas Campanhas</a>
                     </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="criarConta.html">Criar conta</a>
                 </li>
             </ul>
         </div>
