--- a/CyberFicha/criarConta.html
+++ b/CyberFicha/criarConta.html
@@ -3,12 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>CyberFicha</title>
+    <title>Criar conta</title>
 
     <link rel="icon" href="images/icon.jpg">
     <link rel="stylesheet" href="styles/css/reset.css">
     <link rel="stylesheet" href="styles/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="styles/css/index.css">
+    <link rel="stylesheet" href="styles/css/criarConta.css">
 </head>
 
 <body>
@@ -48,6 +49,24 @@
             </ul>
         </div>
     </nav>
+
+    <form class="container formCriarConta">
+        <div class="form-group">
+            <label for="exampleInputEmail1">Email</label>
+            <input type="email" class="form-control criarContaInput" id="exampleInputEmail1"
+                aria-describedby="emailHelp" placeholder="Insira seu Email">
+        </div>
+        <div class="form-group">
+            <label for="exampleInputEmail1">Nome de usuário</label>
+            <input type="text" class="form-control criarContaInput" id="exampleInputEmail1" aria-describedby="emailHelp"
+                placeholder="Insira seu nome de usuário">
+        </div>
+        <div class="form-group">
+            <label for="exampleInputPassword1">Senha</label>
+            <input type="password" class="form-control criarContaInput" id="exampleInputPassword1" placeholder="Senha">
+        </div>
+        <button type="submit" class="btn btn-primary">Criar conta</button>
+    </form>
 
     <script src="js/jquery.js"></script>
     <script src="styles/bootstrap/js/bootstrap.js"></script>
