--- a/CyberFicha/login.html
+++ b/CyberFicha/login.html
@@ -3,13 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Criar conta</title>
+    <title>CyberFicha</title>
 
     <link rel="icon" href="images/icon.jpg">
     <link rel="stylesheet" href="styles/css/reset.css">
     <link rel="stylesheet" href="styles/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="styles/css/index.css">
-    <link rel="stylesheet" href="styles/css/criarConta.css">
 </head>
 
 <body>
@@ -53,22 +52,17 @@
         </div>
     </nav>
 
-    <form class="container formCriarConta">
-        <div class="form-group">
-            <label for="exampleInputEmail1">Email</label>
-            <input type="email" class="form-control criarContaInput" id="exampleInputEmail1"
-                aria-describedby="emailHelp" placeholder="Insira seu Email">
-        </div>
+    <form class="container formLogin">
         <div class="form-group">
             <label for="exampleInputEmail1">Nome de usuário</label>
-            <input type="text" class="form-control criarContaInput" id="exampleInputEmail1" aria-describedby="emailHelp"
+            <input type="email" class="form-control loginInput" id="exampleInputEmail1" aria-describedby="emailHelp"
                 placeholder="Insira seu nome de usuário">
         </div>
         <div class="form-group">
             <label for="exampleInputPassword1">Senha</label>
-            <input type="password" class="form-control criarContaInput" id="exampleInputPassword1" placeholder="Senha">
+            <input type="password" class="form-control loginInput" id="exampleInputPassword1" placeholder="Senha">
         </div>
-        <button type="submit" class="btn btn-primary">Criar conta</button>
+        <button type="submit" class="btn btn-primary">Login</button>
     </form>
 
     <script src="js/jquery.js"></script>
